@@ -6,7 +6,8 @@ import com.smartict.ProjectPoll.entity.Question;
 import com.smartict.ProjectPoll.mapper.AnswerOptionMapper;
 import com.smartict.ProjectPoll.repository.AnswerOptionRepo;
 import com.smartict.ProjectPoll.repository.QuestionRepo;
-import org.springframework.beans.factory.annotation.Autowired;
+import jakarta.persistence.EntityNotFoundException;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -16,20 +17,19 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class AnswerOptionService {
 
-    @Autowired
-    private AnswerOptionRepo answerOptionRepo;
 
-    @Autowired
-    private QuestionRepo questionRepo;
+    private final AnswerOptionRepo answerOptionRepo;
 
-    @Autowired
-    private AnswerOptionMapper answerOptionMapper;
+    private final QuestionRepo questionRepo;
+
+    private final AnswerOptionMapper answerOptionMapper;
 
     public AnswerOptionDTO updateAnswerOption(Integer answerOptionId, AnswerOptionDTO answerOptionDTO) {
         AnswerOption answerOption = answerOptionRepo.findById(answerOptionId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Answer option not found"));
+                .orElseThrow(() -> new EntityNotFoundException("Answer option not found"));
 
         answerOption.setOptionText(answerOptionDTO.getOptionText());
         return answerOptionMapper.toDto(answerOptionRepo.save(answerOption));
@@ -37,7 +37,7 @@ public class AnswerOptionService {
 
     public void deleteAnswerOption(Integer answerOptionId) {
         AnswerOption answerOption = answerOptionRepo.findById(answerOptionId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Answer option not found"));
+                .orElseThrow(() -> new EntityNotFoundException("Answer option not found"));
         answerOptionRepo.delete(answerOption);
     }
 
@@ -45,18 +45,18 @@ public class AnswerOptionService {
         AnswerOption answerOption = answerOptionMapper.toEntity(answerOptionDTO);
         Question question = questionRepo.findById(answerOptionDTO.getQuestionId()).orElse(null);
         if (question == null) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Question not found with id: " + answerOptionDTO.getQuestionId());
+            throw new EntityNotFoundException("Question does not match with id: " + answerOptionDTO.getQuestionId());
         }
         answerOption.setQuestion(question);
         return answerOptionMapper.toDto(answerOptionRepo.save(answerOption));
     }
 
-    public List<AnswerOptionDTO> getAnswerOptionsByQuestionId(Integer questionId, Sort sort) { // Sort parametresini ekleyin
+    public List<AnswerOptionDTO> getAnswerOptionsByQuestionId(Integer questionId, Sort sort) {
         Question question = questionRepo.findById(questionId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Question not found"));
-        List<AnswerOption> answerOptions = answerOptionRepo.findByQuestion(question, sort); // Sort nesnesini kullanın
+                .orElseThrow(() -> new EntityNotFoundException("Question not found"));
+        List<AnswerOption> answerOptions = answerOptionRepo.findByQuestion(question, sort);
         return answerOptions.stream()
                 .map(answerOptionMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
