@@ -4,7 +4,8 @@ import com.smartict.ProjectPoll.dto.SurveyDTO;
 import com.smartict.ProjectPoll.entity.*;
 import com.smartict.ProjectPoll.mapper.SurveyMapper;
 import com.smartict.ProjectPoll.repository.*;
-import org.springframework.beans.factory.annotation.Autowired;
+import jakarta.persistence.EntityNotFoundException;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -15,47 +16,37 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class SurveyService {
-
-    @Autowired
-    private SurveyRepo surveyRepo;
-
-    @Autowired
-    private UserRepo userRepo;
-
-    @Autowired
-    private SurveyMapper surveyMapper;
-
-    @Autowired
-    private QuestionRepo questionRepo;
-
-    @Autowired
-    private AnswerOptionRepo answerOptionRepo;
-
-    @Autowired
-    private UsrAnswerRepo usrAnswerRepo;
+    private final SurveyRepo surveyRepo;
+    private final UserRepository userRepository;
+    private final SurveyMapper surveyMapper;
+    private final QuestionRepo questionRepo;
+    private final AnswerOptionRepo answerOptionRepo;
+    private final UsrAnswerRepo usrAnswerRepo;
 
     @PreAuthorize("hasRole('ROLE_ADMIN')")
     public List<SurveyDTO> getSurveysByUserId(Integer userId, Sort sort) {
-        Usr user = userRepo.findById(userId)
+        Usr user = userRepository.findById(userId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
         List<Survey> surveys = surveyRepo.findByFKuserID(user, sort);
         return surveys.stream()
                 .map(surveyMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public SurveyDTO updateSurvey(Integer surveyId, SurveyDTO surveyDTO) {
+    public void updateSurvey(Integer surveyId, SurveyDTO surveyDTO) {
         Survey survey = surveyRepo.findById(surveyId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Survey not found"));
+                .orElseThrow(() -> new EntityNotFoundException("Survey not found"));
+
 
         UserDetails userDetails = (UserDetails) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        Usr user = userRepo.findByUsername(userDetails.getUsername());
+        Usr user = userRepository.findByUsername(userDetails.getUsername());
         if (user == null) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found");
+            throw new EntityNotFoundException("User not found");
+
         }
 
         Survey updatedSurvey = surveyMapper.toEntity(surveyDTO);
@@ -64,13 +55,14 @@ public class SurveyService {
         survey.setSurveyName(surveyDTO.getSurveyName());
         surveyRepo.save(survey);
 
-        return surveyMapper.toDto(survey);
+        surveyMapper.toDto(survey);
     }
 
     @Transactional
     public void deleteSurvey(Integer surveyId) {
         Survey survey = surveyRepo.findById(surveyId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Survey not found"));
+                .orElseThrow(() -> new EntityNotFoundException("Survey not found"));
+
 
         List<Question> questions = questionRepo.findBySurvey(survey, Sort.by(Sort.Direction.ASC, "id"));
         for (Question question : questions) {
@@ -87,40 +79,43 @@ public class SurveyService {
     public List<SurveyDTO> getAllSurveys(Sort sort) {
         return surveyRepo.findAll(sort).stream()
                 .map(surveyMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @PreAuthorize("hasRole('ROLE_ADMIN')")
-    public SurveyDTO createSurvey(SurveyDTO surveyDTO) {
+    public void createSurvey(SurveyDTO surveyDTO) {
         Survey survey = surveyMapper.toEntity(surveyDTO);
-        Usr user = userRepo.findById(surveyDTO.getFkuserID()).orElse(null);
+        Usr user = userRepository.findById(surveyDTO.getFkuserID()).orElse(null);
         if (user == null) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found with id: " + surveyDTO.getFkuserID());
+            throw new EntityNotFoundException("User does not match with id: "+ surveyDTO.getFkuserID());
+
         }
         survey.setFKuserID(user);
-        return surveyMapper.toDto(surveyRepo.save(survey));
+        surveyMapper.toDto(surveyRepo.save(survey));
     }
 
 
     public SurveyDTO getSurveyById(Integer surveyId) {
         Survey survey = surveyRepo.findById(surveyId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Survey not found"));
+                .orElseThrow(() -> new EntityNotFoundException("Survey not found"));
+
         return surveyMapper.toDto(survey);
     }
 
     @PreAuthorize("hasRole('ROLE_ADMIN')")
     public List<SurveyDTO> getAnsweredSurveysByUserId(Integer userId, Sort sort) {
-        Usr user = userRepo.findById(userId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
+        Usr user = userRepository.findById(userId)
+                .orElseThrow(() -> new EntityNotFoundException("User not found"));
+
 
         List<Integer> answeredSurveyIds = usrAnswerRepo.findByUser(user).stream()
                 .map(usrAnswer -> usrAnswer.getQuestion().getSurvey().getId())
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         List<Survey> surveys = surveyRepo.findAllById(answeredSurveyIds);
         return surveys.stream()
                 .map(surveyMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
